<resources>
    <string name="app_name">Profile</string>
    <string name="app_titulo">HEALTH\nCALC</string>
    <string name="login_activity_login">Login</string>
    <string name="login_activity_subtitulo">Faça login para continuar</string>
    <string name="login_activity_email">E-mail</string>
    <string name="login_activity_senha">Senha</string>
    <string name="login_activity_entrar">Entrar</string>
    <string name="login_activity_lembrar_me">Lembrar-me</string>
    <string name="login_activity_esqueci_a_senha">Esqueci a senha</string>
    <string name="login_acitivity_n_tem_uma_conta">Não tem uma conta?</string>
    <string name="login_activity_criar_uma_conta_agora">Criar uma conta agora</string>
    <string name="dashboard_ncd">NCD</string>
    <string name="dasboard_imc">IMC</string>
    <string name="dasboard_idade">Idade</string>
    <string name="dashboard_peso">Peso</string>
    <string name="dasboard_altura">Altura</string>
    <string name="dashboard_pesaragora">Pesar agora</string>
    <string name="dashboard_verhistorico">Ver Histórico</string>
    <string name="dashboard_revejahistorico">Reveja seu histórico</string>
    <string name="dashboard_acompanhepeso">Acompanhe o seu peso</string>
    <string name="cadastro_trocarfoto">Trocar Foto</string>
    <string name="cadastro_email">E-mail</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_profissao">Profissão</string>
    <string name="cadastro_altura">Altura</string>
    <string name="cadastro_datanascimento">Data de Nascimento</string>
    <string name="cadastro_feminino">Feminino</string>
    <string name="cadastro_maculino">Maculino</string>
    <string name="cadastro_sexo">Sexo</string>
    <string name="cadastro_dados_para_autenticacao">Dados para autenticação</string>
    <string name="cadastro_dados_pessoais">Dados Pessoais</string>
    <string name="nos_pesar_pesar">Vamos nos pesar?</string>
</resources>